--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +21,8 @@
     "helmet": "^8.0.0",
     "mysql2": "^3.11.4",
     "sanitize-html": "^2.13.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
