--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "src",
-  "version": "1.0.0",
-  "main": "app.js",
+  "name": "book.ekinn.site",
+  "version": "1.8.0",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
